IronHack Week1 - Day2 - Ex2 (done)

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,38 +2,42 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="css/main.css"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Instagram</title>
 </head>
 
 <body>
-  <div class = "grad head-container">
+  <div class="container">
+    <div class="content clearfix">
+      <div class="leftPanel">
+        <img src="images/phones.png" id="phones" alt="phones">
+      </div>
 
-  </div>
+      <div class="rightPanel">
+        <div class="header clearfix">
+          <img src="images/brand.png" id="brand" alt="brand">
+          <div class="login">
+            <img src="images/home.png" id="home" alt="home">
+            <span>Log in</span>
+          </div>
+        </div>
+        
+        <service>
+          <div class = "flex-container">
+            <h1>Capture and Share <br> the World's Moments</h1>
+            <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br><br>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
+            Oh yeah, did we mention it's free?</p>
+            <img src="images/badge-iphone.png" id="iphone" alt="iphone">
+            <img src="images/badge-android.png" id="android" alt="android">
+          </div>
+        </service>
+      </div>
+    </div>
 
-  <img src="images/phones.png" id="phones" alt="phones">
-
-  <img src="images/brand.png" id="brand" alt="brand">
-  <button id="login" class = "grad">
-    <img src="images/home.png" id="home" alt="home">
-    <span id = "logtext">Log in</span>
-  </button>
-
-    <img src="images/frame.png" id="frame" alt="frame">
-
-  <div class = "flex-container">
-    <h1>Capture and Share <br> the World's Moments</h1>
-
-    <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
-    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-    <p>Oh yeah, did we mention it's free?</p>
-
-    <img src="images/badge-iphone.png" id="iphone" alt="iphone">
-    <img src="images/badge-android.png" id="android" alt="android">
-  </div>
-
-
+    <footer>
       <div class = "footer-container">
-        <uo>
+        <ul>
           <li>About Us</li>
           <li>Support</li>
           <li>Blog</li>
@@ -43,9 +47,9 @@
           <li>Privacy</li>
           <li>Terms</li>
           <li><span>&copy; 2014 Instagram</span></li>
-        </uo>
+        </ul>
       </div>
-
+    </footer>
+    </div>
   </body>
-
 </html>
