--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,67 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="top">
 
-  Capture and Share the World's Moments
+  </div>
+  <div class="wrapper">
+    <div class="innerWrapper">
+  <div class="phone">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  </div>
+  <div class="insta">
+    <div class="title">
+    <!--<h1>Instagram</h1>-->
+  </div>
+  <div class="login">
+    <div class="home">
+      <p class="logp">Log in</p>
+    </div>
+  </div>
+  <div class="text">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+  <h2>Capture and Share<br> the World's Moments</h2>
 
-  Download on the App Store
-  Get it on Google Play
+  <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  &copy; 2014 Instagram
+  <p>Oh yeah, did we mention it's free?</p>
+    </div>
+  <div class="images">
+    <div class="badge">
+
+    </div>
+    <div class="google">
+
+    </div>
+  </div>
+
+</div>
+
+  <!--Download on the App Store-->
+  <!--Get it on Google Play-->
+
+  <footer>
+  <a href="#0">About Us</a>
+  <a href="#0">Support</a>
+  <a href="#0">Blog</a>
+  <a href="#0">Press</a>
+  <a href="#0">API</a>
+  <a href="#0">Jobs</a>
+  <a href="#0">Privacy</a>
+  <a href="#0">Terms</a>
+
+  <span class="copyrights">&copy; 2014 Instagram</span>
+  </footer>
+
+    </div>
+  </div>
+
+
 </body>
 </html>
