--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,60 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
-  Instagram
+  <main>
+    <div class="phone">
+      <img src="images/phones.png" />
+    </div>
 
-  Capture and Share the World's Moments
+    <div class="logologin">
+      <div class="logo">
+        <img src="images/brand.png" />
+      </div>
+      <div class="home">
+        <img class="house" src="images/home.png" />
+        <p class="button">Log in</p>
+      </div>
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div>
+        <div class="frame">
+          <img src="images/frame.png" />
+        </div>
+        <div class="content">
+          <h1>Capture and Share<br /> the World's Moments</h1>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+            <p>Oh yeah, did we mention it's free?</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        <div class="iphone">
+            <img src="images/badge-iphone.png" />
+        </div>
 
-  &copy; 2014 Instagram
+        <div class="android">
+            <img src="images/badge-android.png" />
+        </div>
+    </div>
+    </div>
+  </main>
+  <div class="divlinks">
+    <footer class="links">
+      <p>About Us</p>
+      <p>Support</p>
+      <p>Blog</p>
+      <p>Press</p>
+      <p>API</p>
+      <p>Jobs</p>
+      <p>Privacy</p>
+      <p>Terms</p>
+
+      <p id="copyright">&copy; 2014 Instagram</p>
+    </footer>
+  </div>
 </body>
 </html>
