--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,61 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css" />
 </head>
 <body>
-  Instagram
+<div class="wrapper">
+  <img src="./images/phones.png" class="phone-float"/>
 
-  Capture and Share the World's Moments
+  <div class="container">
+    <div class="home">
+      <div class="header">
+        <img src="./images/brand.png" class="logo"/>
+        <div class="home-button">
+          <p><img src="./images/home.png" class="house-image"/> Log in</p>
+        </div>
+      </div>
+    </div>
+    <div class="content">
+      <div class="cont-text">
+        <h2>Capture and Share the World's Moments</h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>
+          Instagram is a fast, beautiful and fun way to share your life with
+          friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+           Take a picture or video, choose a filter to transform its look and feel,
+           then post to Instagram &mdash; it's that easy. You can even share to
+           Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+           Oh yeah, did we mention it's free?
+        </p>
+      </div>
 
-  Download on the App Store
-  Get it on Google Play
+          <img src="./images/badge-iphone.png" class="apple"/>
+          <img src="./images/badge-android.png" class="android"/>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    </div><!-- content end -->
 
-  &copy; 2014 Instagram
+
+
+
+  </div>
+
+
+</div><!-- wrapper -->
+
+<footer>
+  <h3>ABOUT US</h3>
+  <h3>SUPPORT</h3>
+  <h3>BLOG</h3>
+  <h3>PRESS</h3>
+  <h3>API</h3>
+  <h3>JOBS</h3>
+  <h3>PRIVACY</h3>
+  <h3>TERMS</h3>
+  <h3 class="copyright">&copy; 2014 Instagram</h3>
+</footer>
+
 </body>
 </html>
