--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,55 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <img class="blue-line" src="./images/bgtile.png">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<div class="content">
 
-  Oh yeah, did we mention it's free?
+    <img class="phones" src="./images/phones.png">
+    <img class="brand" src="./images/brand.png">
+    <img class="home" src="./images/home.png">
 
-  Download on the App Store
-  Get it on Google Play
+    <div class="frame-other">
+      <div class="paragraph">
+        <h2 class="blue-header">Capture and Share <br> the World's Moments</h2>
+      <p>
+        Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+      <br style="line-height:150%;">
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <br style="line-height:150%;">
+        Oh yeah, did we mention it's free?
+      </p>
+      </div>
+    <img class="iphone" src="./images/badge-iphone.png">
+    <img class="android" src="./images/badge-android.png">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+    <ul type="none" class="nav">
+
+      <li class="list-item">ABOUT US</li>
+      <li class="list-item">SUPPORT</li>
+      <li class="list-item">BLOG</li>
+      <li class="list-item">PRESS</li>
+      <li class="list-item">API</li>
+      <li class="list-item">JOBS</li>
+      <li class="list-item">PRIVACY</li>
+      <li class="list-item">TERMS</li>
+      <li class="list-item" style="color:black;">© 2014 INSTAGRAM</li>
+
+      </ul>
+
+</div>
+
+
+
+</div>
+
+
+  </div>
 </body>
 </html>
