Add more p divs. Modify #detail p styles.

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -21,11 +21,11 @@
       <div id="details">
         <h1>Capture and Share the World's Moments</h1>
 
-        <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.
+        <p>Instagram is a <span class="bold">fast</span>, <span class="bold">beautiful</span> and <span class="bold">fun</span> way to share your life with friends and family.</p>
 
-        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-        Oh yeah, did we mention it's free?</p>
+        <p>Oh yeah, did we mention it's free?</p>
         <div id="apps">
           <img class="app" src="./images/badge-iphone.png" />
           <img class="app" src="./images/badge-android.png" />
