--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,73 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
-<body>
-  Instagram
+  <body>
+    <div class="background-image">
+    <img src="./images/bgtile.png" class="background-image"/>
+    </div>
 
-  Capture and Share the World's Moments
+    <div class="bigOne">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="phone-image">
+    <img src="./images/phones.png" class="phone-image"/>
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="right-side">
+    <div class=".top-images">
 
-  Oh yeah, did we mention it's free?
+      <img src="./images/brand.png" class="brand-image"/>
 
-  Download on the App Store
-  Get it on Google Play
+      <button>
+        <img src="./images/home.png" class="home-icon"/>
+        <p> Log In </p>
+      </button>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    </div>
+    <br /><br /><br />
+    <img src="./images/frame.png" class="frame"/>
 
-  &copy; 2014 Instagram
+    <div class="text-box">
+      <h1> Capture and Share <br />
+        the World's Moments </h1>
+
+
+      Instagram is a <b>fast, beautiful </b> and <b> fun </b> way to share your life with friends and family.
+
+      <br /><br />
+
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+
+      <br /><br />
+
+
+      Oh yeah, did we mention it's free?
+
+      <br /><br />
+
+      <img src="./images/badge-iphone.png" class="iphone"/>
+      <img src="./images/badge-android.png" class="android"/>
+
+    </div>
+
+    </div>
+
+<br /><br /><br />
+    <footer>
+
+      About Us
+      Support
+      Blog
+      Press
+      API
+      Jobs
+      Privacy
+      Terms
+
+      &copy; 2014 Instagram
+
+    </footer>
+    </div>
 </body>
 </html>
