The login text is off, so this issue will be fixed in the next commit

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <title>Instagram</title>
 
-  Capture and Share the World's Moments
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600">
+    <link rel="stylesheet" href="./css/main.css">
+  </head>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <body>
+    <section class="container">
+      <section class="top-bg-section"></section>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <section class="bottom-section">
+        <img class="mobile-phones-img" src="./images/phones.png" alt="Mobile Phones" />
 
-  Oh yeah, did we mention it's free?
+        <section class="content">
+          <section class="instagram-header">
+            <img class="brand-img" src="./images/brand.png" alt="Instagram Header" />
+            <span class="login">
+              <img class="home-img" src="./images/home.png" alt="Home" />
+              Login
+            </span>
+          </section>
 
-  Download on the App Store
-  Get it on Google Play
+          <section class="content-text">
+            <h2>Capture and Share <br /> the World's Moments</h2>
+            <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+            <img class="badge-iphone" src="./images/badge-iphone.png" alt="Download on the App Store" />
+            <img class="badge-android" src="./images/badge-android.png" alt="Get it on Google Play" />
+          </section>
+        </section>
+      </section>
 
-  &copy; 2014 Instagram
-</body>
+      <footer>
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li>&copy; 2014 Instagram</li>
+        </ul>
+      </footer>
+    </section>
+  </body>
 </html>
