--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,69 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css" />
 </head>
 <body>
-  Instagram
+<div class="topbackground">
 
-  Capture and Share the World's Moments
+</div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<div class="center">
+  <img class="phones" src="./images/phones.png" />
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<div class="content">
 
-  Oh yeah, did we mention it's free?
+  <header>
+    <img class="brand" src="./images/brand.png" />
+    <div class="home">
+      <img src="./images/home.png" />
+      <p class="hometext">Log in</p>
+    </div>
+  </header>
 
-  Download on the App Store
-  Get it on Google Play
+  <div class="frame">
+    <p>
+        <h2>Capture and Share<br /> the World's Moments</h2>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.<br />
 
-  &copy; 2014 Instagram
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br />
+
+        Oh yeah, did we mention it's free?<br />
+
+        Download on the App Store<br />
+
+        Get it on Google Play<br />
+    </p>
+
+ <img src="./images/badge-iphone.png" />
+ <img src="./images/badge-android.png" />
+
+  </div>
+
+</div>
+
+</div>
+
+<footer>
+  <nav class="nav">
+    <a href="">About Us</a>
+    <a href="">Support</a>
+    <a href="">Blog</a>
+    <a href="">Press</a>
+    <a href="">API</a>
+    <a href="">Jobs</a>
+    <a href="">Privacy</a>
+    <a href="">Terms</a>
+  </nav>
+
+  <p>
+    &copy; 2014 Instagram
+  </p>
+</footer>
+
+
+
+
 </body>
 </html>
