--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet"  href="./css/main.css">
   <title>Instagram</title>
 </head>
+
+
+
 <body>
-  Instagram
+  <div class="parent-container">
+    <div class="blue"> </div>
 
-  Capture and Share the World's Moments
+    <section class="center-container">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div class="phones">
+        <img src="./images/phones.png"> </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div class="brand-login">
+        <img src="./images/brand.png">
+        <img src="./images/home.png"> Log in </div>
 
-  Oh yeah, did we mention it's free?
+      <div class="box-words">
+        <img src="./images/frame.png">
+        <p class="text">Instagram
+            Capture and Share the World's Moments
+          Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          Oh yeah, did we mention it's free?
+        </p>
+      </div>
 
-  Download on the App Store
-  Get it on Google Play
+      <div class="appstore-buttons">
+        <img src="./images/badge-iphone.png">
+        <img src="./images/badge-android.png">
+        <p>Download on the App Store
+           Get it on Google Play </p>
+      </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <div class="bottom-nav">
+        <nav>
+          <a href = "#0"> About Us </a>
+          <a href = "#1"> Support </a>
+          <a href = "#2"> Blog </a>
+          <a href = "#3"> Press </a>
+          <a href = "#4"> API </a>
+          <a href = "#5"> Jobs </a>
+          <a href = "#6"> Privacy </a>
+          <a href = "#7"> Terms </a>
+          <p> &copy; 2014 Instagram </p>
+        </nav>
+      </div>
 
-  &copy; 2014 Instagram
+    </section>
+  </div>
 </body>
 </html>
