almost done. still ned to fix the whte background img

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,52 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="container">
+  <aside class="side-image"><img src="./images/phones.png" alt="image of phones"></aside>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <main class="content">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <section class="inner-heading">
+      <img src="./images/brand.png" alt="Instagram">
+      <button class="login"><img src="./images/home.png"/>Log in</button>
+    </section>
 
-  Oh yeah, did we mention it's free?
+    <section class="info">
+      <h1>Capture and Share the World's Moments</h1>
+      <p class="description">
+        Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        Oh yeah, did we mention it's free?
+      </p>
+      <img src="./images/badge-iphone.png" alt="Download on the App Store">
+      <img src="./images/badge-android.png" alt="Get it on Google play">
 
-  Download on the App Store
-  Get it on Google Play
+    </section>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  </main>
 
-  &copy; 2014 Instagram
+
+
+</div>
+
+  <nav>
+    <ul class="footer-nav">
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </nav>
+
+
 </body>
 </html>
