--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,9 +2,21 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="background-up"></div>
+  <div class="background-down"></div>
+  <section class="right-image">
+
+  </section>
+  <section class="info-box">
+
+  </section>
+  <section class="footer">
+
+  </section>
+  <!-- Instagram
 
   Capture and Share the World's Moments
 
@@ -26,6 +38,6 @@
   Privacy
   Terms
 
-  &copy; 2014 Instagram
+  &copy; 2014 Instagram -->
 </body>
 </html>
