box info section structure positioned

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -8,12 +8,16 @@
   <div class="background-up"></div>
   <div class="background-down"></div>
 
-  <section class="right-image">
+  <section class="left-image"></section>
 
-  </section>
-
-  <section class="info-box">
-
+  <section class="box">
+    <div class="logo"></div>
+    <div class="login-btn"></div>
+    <div class="info"></div>
+    <div class="badges">
+      <div class="iphone-badge"></div>
+      <div class="android-badge"></div>
+    </div>
   </section>
 
 
