box info all elements inside positioned

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -13,7 +13,9 @@
   <section class="box">
     <div class="logo"></div>
     <div class="login-btn"></div>
-    <div class="info"></div>
+    <div class="info">
+      <div class="info-text"></div>
+    </div>
     <div class="badges">
       <div class="iphone-badge"></div>
       <div class="android-badge"></div>
@@ -22,6 +24,7 @@
 
 
   <section class="footer">
+
 
   </section>
   <!-- Instagram
