--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="/Users/chrisestepa/desktop/ironhack/week1/day2/de/lab-css-instagram-clone/starter-code/css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="blue-div">
+    <div class="logo">
+      <img src="/Users/chrisestepa/desktop/ironhack/week1/day2/de/lab-css-instagram-clone/starter-code/images/brand.png" alt="Instagram logo">
+    </div>
+    <div class="log-in">
+      <img src="/Users/chrisestepa/desktop/ironhack/week1/day2/de/lab-css-instagram-clone/starter-code/images/home.png" alt="Home">
+      <a href=#>Log in</a>
+    </div>
+  </div>
 
-  Capture and Share the World's Moments
+  <div class="white-div">
+    <img class="phone" src="/Users/chrisestepa/desktop/ironhack/week1/day2/de/lab-css-instagram-clone/starter-code/images/phones.png" alt="Mobile phone">
+    <div class="info">
+      <h2>Capture and Share the World's Moments</h2>
+      <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <img src="/Users/chrisestepa/desktop/ironhack/week1/day2/de/lab-css-instagram-clone/starter-code/images/badge-iphone.png" alt="App Store">
+      <img src="/Users/chrisestepa/desktop/ironhack/week1/day2/de/lab-css-instagram-clone/starter-code/images/badge-android.png" alt="Play Store">
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <footer>
+      <a href="#"><b>About Us</a>
+      <a href="#">Support</a>
+      <a href="#">Blog</a>
+      <a href="#">Press</a>
+      <a href="#">API</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy</a>
+      <a href="#">Terms</b></a>
 
-  Oh yeah, did we mention it's free?
+      <h5>&copy; 2014 Instagram</h5>
+    </footer>
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
