Clone de Instagram

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,63 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="container">
 
-  Capture and Share the World's Moments
+    <div class="azul"></div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="blanca"></div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="phone">
+      <img src="images/phones.png" alt="">
+    </div>
 
-  Oh yeah, did we mention it's free?
+    <div class="logo">
+        <img src="images/brand.png" alt="">
+    </div>
 
-  Download on the App Store
-  Get it on Google Play
+    <div class="login">
+        <img class="home" src="images/home.png" alt="">
+        <p>Log in</p>
+    </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    <div class="texto">
 
-  &copy; 2014 Instagram
+      <h2>Capture and Share the World's Moments</h2>
+
+      <p>
+        Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      </p>
+
+      <p>
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      </p>
+
+      <p>
+          Oh yeah, did we mention it's free?
+      </p>
+    </div>
+
+    <div class="app">
+      <img src="images/badge-iphone.png" alt="">
+      <img class="android" src="images/badge-android.png" alt="">
+    </div>
+
+    <ul>
+      <li>About Us</li>
+      <li>  Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+
+  </div>
+
 </body>
 </html>
