--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,22 +9,27 @@
   </div>
   <div class="central-container">
     <div class="left-side">
+      <img src="images/phones.png">
     </div>
     <div class="right-side">
       <header>
-        <img src="images/brand.png">
+        <img src="images/brand.png" class="brand">
+        <div class="log-in-box">
+          <img src="images/home.png">
+          <p> Log In </p>
+        </div>
       </header>
       <main>
-        <h4>Capture and Share the World's Moments</h4>
+        <h4>Capture and Share<br> the World's Moments</h4>
 
-        Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-        Oh yeah, did we mention it's free?
+        <p>Oh yeah, did we mention it's free?</p>
 
-        Download on the App Store
-        Get it on Google Play
+        <img src="images/badge-iphone.png">
+        <img src="images/badge-android.png">
       </main>
     </div>
   </div>
