--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,62 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css"
 </head>
 <body>
-  Instagram
+  <div id="mainBlue">
+  <h1></h1>
+  </div>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<div id="mainWhite">
+</div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<div id="aboveAll">
+  <div id="phone">
+    <img src="images/phones.png" alt="phones">
+  </div>
 
-  Oh yeah, did we mention it's free?
+<div id="mainPart">
+  <section id="brand">
+  <img src="images/brand.png" alt="brand">
+  <button>
+    <img src="images/home.png">
+    <span>Log in</span>
+  </button>
+</section>
+<section id="text">
+  <h2>Capture and Share the World's Moments</h2>
 
-  Download on the App Store
-  Get it on Google Play
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  &copy; 2014 Instagram
+  <p>Oh yeah, did we mention it's free?</p>
+</section>
+
+  <section id="buttons">
+    <img src="images/badge-iphone.png" alt="iphone">
+    <img src="images/badge-android.png" alt="android">
+
+</section>
+</div>
+
+<footer>
+  <ul>
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li>Terms</li>
+</ul>
+
+  <span>&copy; 2014 Instagram</span>
+
+</footer>
+</div>
 </body>
 </html>
