--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,57 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="content-1">
+  </div>
+  <div class="content-2">
+  </div>
+  <div class="content-3">
+    <div class="phones col">
+      <img src="images/phones.png"/>
+    </div>
+    <div class="instagram col">
+        <div class="brand col">
+          <img src="images/brand.png"/>
+        </div>
+        <div class="button-header col">
+          <button>
+            <img class="img-button" src="images/home.png"/><span>Log In</span>
+          </button>
+        </div>
+      <div class="clearfix"></div>
+      <div class="instagram-information">
+        <h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Oh yeah, did we mention it's free?</p>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+        <div class="button-app col">
+          <img src="images/badge-iphone.png"/>
+        </div>
+        <div class="button-app col">
+          <img src="images/badge-android.png"/>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer">
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </div>
 </body>
 </html>
