--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link type="text/css" rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="top-blue">
+  </div>
+  <div class="container">
 
-  Capture and Share the World's Moments
+    <div class="phones">
+      <img src="images/phones.png" class="picture">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="content">
+      <div>
+        <img src="images/brand.png" class="left">
+        <button><img src="images/home.png" class="top"> Log in</button>
+      </div>
+      <div class="text">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <h1>Capture and Share the World's Moments</h1>
 
-  Oh yeah, did we mention it's free?
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+      <div class="badges">
+        <img src="images/badge-iphone.png" class="apple">
+        <img src="images/badge-android.png">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      </div>
+    </div>
+  </div>
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li><span>&copy; 2014 Instagram</span></li>
+  </ul>
 
-  &copy; 2014 Instagram
+</footer>
 </body>
 </html>
