--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,51 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <section class="blue-background"></section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="container">
+    <section class="pos-relative">
+      <img class="phones" src="./images/phones.png" alt="Phones">
+    </section>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <section class="pos-relative">
+      <div class="logo-header">
+        <img class="middle" src="./images/brand.png" alt="Instagram Logo">
+        <a href="#"><img class="middle" src="./images/home.png" alt="Home">Log In</a>
+      </div>
+      <div class="capture-moments">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  </p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+      <div>
+        <img class="download-button" src="./images/badge-android.png" alt="Download on the App Store">
+        <img class="download-button" src="./images/badge-iphone.png" alt="Get it on Google Play">
+      </div>
+    </section>
+  </div>
 
-  Oh yeah, did we mention it's free?
+  <div class="clearfix"></div>
 
-  Download on the App Store
-  Get it on Google Play
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li class="text-grey">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
