--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,62 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel = "stylesheet" href = "css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600" rel="stylesheet">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class = "darkBlueBox">
+</div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<div class = "whiteBox">
+</div>
+
+<div>
+  <img src = "images/phones.png" class = "phone-div">
+</div>
+
+<div class = "content-div">
+
+<div class = "title-div">
+  <img src = "images/brand.png">
+  <button type = "button" class = "home-button">
+  <img src = "images/home.png" class = "align-with-text"> <p>Log in</p>
+</button>
+</div>
+
+<div class = "text-div">
+  <h2>Capture and Share <br> the World's Moments</h2>
+
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+  Oh yeah, did we mention it's free?</p>
+<div class = "store-buttons">
+  <img src = "images/badge-iphone.png">
+  <img src = "images/badge-android.png">
+</div>
+</div>
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+</div>
 
-  &copy; 2014 Instagram
+<div>
+  <ul class = "under-list">
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li><span class = "copyright">&copy; 2014 Instagram</span></li>
+  </ul>
+</div>
+
+
+
 </body>
 </html>
