--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,37 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+<img src = "images/phones.png" class="phone">
+<img src = "images/brand.png" class="instagram">
+<button class="house"><img src = "images/home.png" class="imgbut">    Log in</button>
+<section class = "text">
+  <div class="capture"><b>Capture and Share the World's Moments</b></div>
+  <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Capture and Share the World's Moments
+  <p>Take a picture or video, choose a filter to transform its look and feel,
+     then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter,
+     Tumblr and more. It's a new way to see the world.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Oh yeah, did we mention it's free?</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <img src="images/badge-iphone.png">
+  <img src="images/badge-android.png">
+</section>
 
-  Oh yeah, did we mention it's free?
+<div class = "footer">
+  <a href="https://www.instagram.com/about/us/" class="link"> ABOUT US </a>
+  <a href="https://help.instagram.com/" class="link"> SUPPORT </a>
+  <a href="http://blog.instagram.com/" class="link"> BLOG </a>
+  <a href="https://instagram-press.com/" class="link"> PRESS </a>
+  <a href="https://www.instagram.com/developer/" class="link"> API </a>
+  <a href="https://www.instagram.com/about/jobs/" class="link"> JOBS </a>
+  <a href="https://help.instagram.com/196883487377501" class="link"> PRIVACY </a>
+  <a href="https://help.instagram.com/478745558852511" class="link"> TERMS </a>
+  <a id="copy" href="https://help.instagram.com/478745558852511" class="link"> 2014 INSTAGRAM</a>
+</div>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
