--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,77 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class="container">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="leftSide">
+      <img src="images/phones.png">
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+  <div class="rightSide">
 
-  Download on the App Store
-  Get it on Google Play
+      <div>
+          <div class="logo1">
+            <img src="images/brand.png">
+          </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+          <button>
+                <img src="images/home.png">
+            <span> Log in </span>
 
-  &copy; 2014 Instagram
+          </button>
+
+      </div>
+
+
+
+      <div class="sectionWhite">
+          <h3>Capture and Share the World's Moments</h3>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>Oh yeah, did we mention it's free?</p>
+      </div>
+
+      <div class="downLogos">
+          <div class="logo2">
+            <img src="images/badge-iphone.png">
+          </div>
+
+          <div class="logo3">
+          <img src="images/badge-android.png">
+          </div>
+      </div>
+  </div>
+
+  <div class="last">
+    <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>  Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li>&copy; 2014 Instagram</li>
+
+    </ul>
+  </div>
+
+</div>
+
+
+<div class=blueBackground>
+</div>
+
+
+
+
+
 </body>
 </html>
