--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,69 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600" rel="stylesheet">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="backgroundBlue"></div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="content">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="photo sect">
+      <img src="images/phones.png" alt="iphone">
+    </div>
 
-  Oh yeah, did we mention it's free?
+    <div class="text sect">
 
-  Download on the App Store
-  Get it on Google Play
+      <section class="header">
+        <img src="images/brand.png" alt="instagram">
+        <div>
+          <img src="images/home.png" alt="home"> Log in
+        </div>
+      </section>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <section class="moments">
+        <h2>Capture and Share <br> the World's Moments</h2>
 
-  &copy; 2014 Instagram
+        <p>
+          Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and
+          <strong>fun</strong> way to share your life with friends and family.
+        </p>
+
+        <p>
+          Take a picture or video, choose a filter to transform its look and
+          feel, then post to Instagram &mdash; it's that easy. You can even share
+          to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+
+        <p>Oh yeah, did we mention it's free?</p>
+
+      </section>
+
+      <section class="app">
+        <img src="images/badge-iphone.png" alt="iphone">
+        <img src="images/badge-android.png" alt="android">
+      </section>
+    </div>
+
+  </div>
+
+  <footer>
+    <div>
+      <ul>
+        <li><a href="">ABOUT US</a></li>
+        <li><a href="">SUPPORT</a></li>
+        <li><a href="">BLOG</a></li>
+        <li><a href="">PRESS</a></li>
+        <li><a href="">API</a></li>
+        <li><a href="">JOBS</a></li>
+        <li><a href="">PRIVACY</a></li>
+        <li><a href="">TERMS</a></li>
+        <li class="copy">&copy; 2014 Instagram</li>
+      </ul>
+    </div>
+  </footer>
+
 </body>
 </html>
