--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,58 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+<!-- background -->
+  <div class="background1">
 
-  Capture and Share the World's Moments
+      </div>
+  <div class="background2">
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<!-- container -->
+  <div class="container">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <!-- section left -->
+    <section class="left">
 
-  Oh yeah, did we mention it's free?
+    </section>
+    <!-- section right -->
+    <section class="right">
+      <div class="top">
+            <img class="img1" src="images/brand.png" alt="brand">
+            <button class="boton"><img src="images/home.png" alt="home"><a href=""></a>Log In</button>
+       </div>
+      <div class="bot">
+            <h2>Capture and Share the World's Moments</h2>
+                 <p>
+                   Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+                  </p>
+                 <p>
+                   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+                        </p>
+                   <p>Oh yeah, did we mention it's free?</p>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+                  <img src="images/badge-iphone.png" alt="play">
+                  <img src="images/badge-android.png" alt="apple">
+           </div>
+       </section>
+            </div>
+<!-- footer -->
+  <footer>
+          <ul>
+                <li>About Us</li>
+                <li>Support</li>
+                <li>Blog</li>
+                <li>Press</li>
+                <li>API</li>
+                <li>Jobs</li>
+                <li>Privacy</li>
+                <li>Terms</li>
+                <li><span>&copy; 2014 Instagram</span></li>
+          </ul>
+  </footer>
 </body>
+
 </html>
