--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -13,19 +13,23 @@
 
     <section class="inner-heading">
       <img src="./images/brand.png" alt="Instagram">
-      <button class="login"><img src="./images/home.png"/>Log in</button>
+      <button class="login"><img src="./images/home.png"/><span>Log in</span></button>
     </section>
 
     <section class="info">
       <h1>Capture and Share the World's Moments</h1>
       <p class="description">
-        Instagram is a fast, beautiful and fun way to share your life with friends and family.
-        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+      <p class="description">
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+        it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p class="description">
         Oh yeah, did we mention it's free?
       </p>
-      <img src="./images/badge-iphone.png" alt="Download on the App Store">
-      <img src="./images/badge-android.png" alt="Get it on Google play">
-
+      <div class="stores">
+        <img src="./images/badge-iphone.png" alt="Download on the App Store">
+        <img src="./images/badge-android.png" alt="Get it on Google play">
+      </div>
     </section>
 
   </main>
@@ -34,8 +38,8 @@
 
 </div>
 
-  <nav>
-    <ul class="footer-nav">
+  <nav class="footer-nav">
+    <ul class="navigation">
       <li>About Us</li>
       <li>Support</li>
       <li>Blog</li>
