--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,21 +2,48 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <!--fondos-->
+<div class="backgrounds">
+<img id="blue-back" src="./images/bgtile.png" alt="blue">
+</div>
 
-  Capture and Share the World's Moments
+<div class=phones>
+<img src="./images/phones.png" alt="cells">
+</div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+<div class=explain>
 
-  Download on the App Store
-  Get it on Google Play
+  <div class="brand">
+    <img src="./images/brand.png" alt="brand">
+  </div>
+<div class= hb>
+  <div class="house">
+    <img src="./images/home.png" alt="house">
+    <button id="button" type="button">Log In!</button>
+  </div>
+</div>
 
+  <div class="paragraph">
+
+  <h3>Capture and Share<br> the World's Moments</h3>
+
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.<br>
+
+  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+
+  Oh yeah, did we mention it's free?</p>
+
+  <img src="./images/badge-iphone.png" alt="app">
+  <img src="./images/badge-android.png" alt="google">
+  </div>
+</div>
+
+<footer>
   About Us
   Support
   Blog
@@ -25,7 +52,8 @@
   Jobs
   Privacy
   Terms
+  <span>&copy; 2014 Instagram</span>
+</footer>
 
-  &copy; 2014 Instagram
 </body>
 </html>
