--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -12,43 +12,44 @@
 
   <section class="box">
     <div class="logo"></div>
-    <div class="login-btn"></div>
+    <div class="login">
+      <button class="login-btn">Log in</button>
+    </div>
     <div class="info">
-      <div class="info-text"></div>
+      <div class="info-text">
+        <h2>Capture and Share <br> the World's Moments</h2>
+        <p>
+          Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
+      </div>
     </div>
     <div class="badges">
-      <div class="iphone-badge"></div>
-      <div class="android-badge"></div>
+      <div class="iphone-badge">
+        <img src="images/badge-iphone.png" alt="badge iphone">
+      </div>
+      <div class="android-badge">
+        <img src="images/badge-android.png" alt="badge iphone">
+      </div>
     </div>
   </section>
-
-
   <section class="footer">
-
-
+  <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li>&copy; 2014 Instagram</li>
+  </ul>
   </section>
-  <!-- Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram -->
 </body>
 </html>
