--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -13,7 +13,7 @@
   <section class="box">
     <div class="logo"></div>
     <div class="login">
-      <button class="login-btn">Log in</button>
+      <button class="login-btn"><strong>Log in</strong></button>
     </div>
     <div class="info">
       <div class="info-text">
